--- a/app/src/main/res/layout/fragment_file_list.xml
+++ b/app/src/main/res/layout/fragment_file_list.xml
@@ -31,6 +31,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         tools:listitem="@layout/item_file" />
 
+    <TextView
+        android:id="@+id/emptyStateText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="No files found for this course."
+        android:textSize="18sp"
+        android:textColor="@android:color/darker_gray"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@id/searchViewFiles"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <ProgressBar
         android:id="@+id/loadingSpinner"
         android:layout_width="wrap_content"
