--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -33,8 +33,8 @@
                 android:layout_width="0dp"
                 android:layout_height="56dp"
                 android:layout_weight="1"
-                android:text="Admin Mode"
-                android:textAllCaps="false"
+                android:text="Admin"
+                android:textAllCaps="true"
                 android:textSize="14sp"
                 android:textStyle="bold"
                 app:cornerRadius="10dp"
@@ -48,7 +48,7 @@
                 android:layout_height="56dp"
                 android:layout_weight="1"
                 android:text="Upload"
-                android:textAllCaps="false"
+                android:textAllCaps="true"
                 android:textSize="14sp"
                 android:textStyle="bold"
                 app:cornerRadius="10dp"
