--- a/app/src/main/res/layout/fragment_admin_batch_link.xml
+++ b/app/src/main/res/layout/fragment_admin_batch_link.xml
@@ -4,13 +4,16 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:background="@color/backgroundColor">
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
+        android:padding="12dp"
         android:hint="Gender"
+        android:background="@drawable/rounded_search_background"
         >
 
         <Spinner
@@ -18,21 +21,21 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:spinnerMode="dropdown"
-            android:popupBackground="@color/white"/>
+            android:popupBackground="@color/white"
+            />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
-        app:hintTextColor="@color/white"
         android:hint="Title">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"
+            android:background="@color/white"
             android:inputType="text" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -40,14 +43,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        app:hintTextColor="@color/white"
         android:hint="URL">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editUrl"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"
+            android:background="@color/white"
             android:inputType="textUri" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -59,7 +61,7 @@
         android:layout_marginBottom="12dp"
         app:cornerRadius="8dp"
         android:textAllCaps="false"
-        android:backgroundTint="@color/orange"/>
+        android:backgroundTint="@color/Green"/>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnUpdate"
@@ -70,7 +72,8 @@
         android:layout_marginBottom="12dp"
         app:cornerRadius="8dp"
         android:textAllCaps="false"
-        android:backgroundTint="@color/orange"/>
+        android:backgroundTint="@color/Green"
+        />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnDelete"
