--- a/app/src/main/res/layout/fragment_admin_config.xml
+++ b/app/src/main/res/layout/fragment_admin_config.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
+    android:gravity="center"
     >
 
     <com.google.android.material.textfield.TextInputLayout
@@ -17,7 +18,8 @@
             android:layout_height="wrap_content"
             android:inputType="number"
             android:hint="App Version Code"
-            android:textColor="@color/white"/>
+            android:background="@color/white"
+            android:textColor="@color/black"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -31,7 +33,8 @@
             android:layout_height="wrap_content"
             android:inputType="textUri"
             android:hint="Update Link (APK URL)"
-            android:textColor="@color/white"/>
+            android:background="@color/white"
+            android:textColor="@color/black"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.button.MaterialButton
@@ -41,6 +44,6 @@
         android:text="Save Config"
         android:textAllCaps="false"
         app:cornerRadius="12dp"
-        android:backgroundTint="@color/orange"/>
+        android:backgroundTint="@color/Green"/>
 
 </LinearLayout>
