--- a/app/src/main/res/layout/fragment_pdf_viewer.xml
+++ b/app/src/main/res/layout/fragment_pdf_viewer.xml
@@ -2,7 +2,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="5dp">
 
     <com.github.barteksc.pdfviewer.PDFView
         android:id="@+id/pdfView"
