--- a/app/src/main/res/layout/item_notice.xml
+++ b/app/src/main/res/layout/item_notice.xml
@@ -2,7 +2,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/noticeCardSwipe"
-    android:layout_width="320dp"  android:layout_height="wrap_content"
+    android:layout_width="320dp"
+    android:layout_height="wrap_content"
     android:layout_marginEnd="12dp"
     android:clickable="true"
     android:focusable="true"
