--- a/app/src/main/res/layout/fragment_admin.xml
+++ b/app/src/main/res/layout/fragment_admin.xml
@@ -28,6 +28,17 @@
             android:text="Manage Users"
         />
 
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnSendNotification"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/Green"
+            android:text="Send Notification"
+            android:layout_marginBottom="8dp"
+            android:textAllCaps="false"
+            android:textSize="16sp"
+            />
+
 
         <TextView
             android:layout_width="match_parent"
